Separate frontend (Vercel) and backend (Render) deployments
- Remove static file serving from Go backend
- Add health check endpoint for backend monitoring
- Configure frontend to use environment variable for backend URL
- Create .env files for development and production
- Add Vercel configuration
- Update build scripts for backend-only deployment
- Add comprehensive deployment documentation

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,9 @@
 services:
   - type: web
-    name: radiuschat
+    name: radiuschat-backend
     runtime: go
-    buildCommand: chmod +x build.sh && ./build.sh
+    buildCommand: go build -o app main.go
     startCommand: ./app
+    envVars:
+      - key: PORT
+        sync: false
